Some slight fixes and balancing to the economy